Send and Accept team invitation

--- a/my_projects/time_track_project/time_team/templates/team/accept_invitation.html
+++ b/my_projects/time_track_project/time_team/templates/team/accept_invitation.html
@@ -29,7 +29,7 @@
 
                           <div class="form-group">
                             <label for="title">Code(from email):</label>
-                            <input type="text" class="form-control" name="title" placeholder="Enter code" id="id_title" v-model="title">
+                            <input type="text" class="form-control" name="code" placeholder="Enter code" id="id_title" v-model="title">
                             <!-- <span></span> -->
                             <!-- <strong class="alert"></strong> -->
                             <!-- <p  v-if="errors.length">
