--- a/my_projects/time_track_project/time_track/templates/time_track/time_account.html
+++ b/my_projects/time_track_project/time_track/templates/time_track/time_account.html
@@ -22,17 +22,18 @@
     <div class="col-md-4">
       <div class="card">
         <div class="card-header bg-dark text-center text-white">
-          img
+          <img src="{{user.timeprofile.get_avatar}}" alt="" style="height: 150px; max-width: 100%;">
 
           <h5>PROFILE DETAILS</h5>
-          <a href="" class="btn btn-sm btn-info">Edit Avatar</a>
+          <!-- <a href="" class="btn btn-sm btn-info">Edit Avatar</a> -->
+          <a href="{% url 'time-edit-account' %}" class="btn btn-sm btn-info">Edit Profile</a>
+          <a href="{% url 'time-add-team' %}" class="btn btn-sm btn-success">Add Team</a>
         </div>
         <div class="card-body">
           <h5>Profile Name:{% firstof user.get_full_name user.username %}</h5>
           <h5>Email Address:{{user.email}}</h5>
           <hr>
-          <a href="{% url 'time-edit-account' %}" class="btn btn-sm btn-info">Edit Profile</a>
-          <a href="{% url 'time-add-team' %}" class="btn btn-sm btn-success">Add Team</a>
+        
 
         </div>
 
