--- a/my_projects/time_track_project/time_team/templates/team/team.html
+++ b/my_projects/time_track_project/time_team/templates/team/team.html
@@ -25,7 +25,7 @@
                   </div>
                   <div class="card-body">
                       {% for member in team.members.all %}
-                        <p>{{member.username}}</p>
+                        <p><a href="{% url 'time-dashboard-user' user.id %}"><b>{{member.username}}</b></a></p>
                       {%endfor%}
                   </div>
                   <div class="card-footer">
