--- a/my_projects/time_track_project/time_track/templates/time_track/time_nav.html
+++ b/my_projects/time_track_project/time_track/templates/time_track/time_nav.html
@@ -9,6 +9,22 @@
     <ul class="navbar-nav ml-auto">
 
       {% if  request.user.is_authenticated%}
+
+      <li class="nav-item" v-if="!trackingTime">
+        <a @click="startTimer()" class="nav-link" href="">
+          <span>Start</span>
+        </a>
+      </li>
+
+      
+      <li class="nav-item" v-else>
+        <a @click="stopTimer()" class="nav-link" href="">
+          <span>[[readableSecond]] stop</span>
+        </a>
+      </li>
+
+
+
       <li class="nav-item">
         <a class="nav-link" href="{%url 'time-account' %}">{% firstof request.user.get_full_name request.user.username %}</a>
       </li>
@@ -34,6 +50,8 @@
         <a class="nav-link" href="{%url 'social-login' %}">Login</a>
       </li>
       {%endif%}
+
+    
     
     </ul>
   </nav>
@@ -47,3 +65,17 @@
   {%endfor%}
 
   {% endif %}
+
+
+
+  <script>
+    var NavbarApp = {
+      data() {
+        return {
+          // seconds : {{active_entry_seconds}},
+          trackingTime:false,
+          // showTracking
+        }
+      }
+    }
+  </script>
