--- a/my_projects/time_track_project/time_track/templates/time_track/time_account.html
+++ b/my_projects/time_track_project/time_track/templates/time_track/time_account.html
@@ -35,6 +35,23 @@
           <hr>
         
 
+          <div >
+          <ul id="navbar-app">
+            <li class="nav-item" v-if="!trackingTime">
+              <a @click="startTimer()" class="nav-link" href="">
+                <span>Start</span>
+              </a>
+            </li>
+      
+            
+            <li class="nav-item" v-else>
+              <a @click="stopTimer()" class="nav-link" href="">
+                <span>[[readableSecond]] stop</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+
         </div>
 
         {% if invitations%}
@@ -126,3 +143,59 @@
 </div>
 
 {%endblock%}
+
+
+
+{%block script%}
+
+<script>
+  var NavbarApp = {
+    data() {
+      return {
+        seconds : {{active_entry_seconds}},
+        trackingTime:false,
+        showTrackingModal:false,
+        timer:null,
+        entryID:0,
+        startTime: '{{start_time}}',
+        readableSecond:2,
+      }
+    },
+    elimiters: ['[[',']]'],
+    methods:{
+      startTimer(){
+
+      },
+      stopTimer(){
+
+      },
+    },
+    mounted(){
+        if (this.seconds !==0){
+          this.trackingTime = true,
+          this.timer = setInterval(()=>{
+            this.seconds = (new Datet() - new Date(this.startTime)) / 1000
+          },1000)
+        }
+      },
+      computed:{
+        readableSeconds(){
+          const d = Number(this.seconds);
+          const h = Math.floor(d / 3600);
+          const m = Math.floor(d % 3600 / 60);
+          const s = Math.floor(d % 3600 % 60);
+
+          const hDisplay = h > 0 ? h + (h==1? "h, ":"h, "):"";
+          const mDisplay = m > 0 ? m + (m==1? "m, ":"m, "):"";
+          const sDisplay = s > 0 ? s + (s==1? "s, ":"s, "):"";
+
+          return hDisplay + mDisplay + sDisplay;
+
+        }
+      }
+    }
+  
+    Vue.createApp(NavbarApp).mount('#navbar-app')
+</script>
+
+{%endblock script%}
