Api to track time

--- a/my_projects/time_track_project/time_track/templates/time_track/time_account.html
+++ b/my_projects/time_track_project/time_track/templates/time_track/time_account.html
@@ -164,7 +164,7 @@
     elimiters: ['[[',']]'],
     methods:{
       startTimer(){
-
+        fetch('') //work from here
       },
       stopTimer(){
 
