--- a/my_projects/time_track_project/time_track/templates/time_track/time_account.html
+++ b/my_projects/time_track_project/time_track/templates/time_track/time_account.html
@@ -36,7 +36,7 @@
         
 
           <div >
-          <ul id="navbar-app">
+          <!-- <ul id="navbar-app">
             <li class="nav-item" v-if="!trackingTime">
               <a @click="startTimer()" class="nav-link" href="">
                 <span>Start</span>
@@ -49,7 +49,7 @@
                 <span>[[ readableSeconds ]] stop</span>
               </a>
             </li>
-          </ul>
+          </ul> -->
         </div>
 
         </div>
